Prevent flickering when items are added

--- a/practice/10/try/src/css/style.css
+++ b/practice/10/try/src/css/style.css
@@ -27,7 +27,7 @@
   list-style: none;
   padding: 0;
   position: absolute;
-  left: -400px;
+  left: 0px;
   height: inherit;
   width: auto;
 }
